# raspi_ros

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt
.claude/: README.md  architecture-analysis.md  baseline-metrics.json  completion-summary.md  migration-risk-assessment.md  operations-log.md  python-environment-fix.md  refactored-architecture.md  refactoring-implementation-plan.md  servo-driver-summary.md  servo-no-response-troubleshooting.md  servo-testing-guide.md  websocket-analysis-report.md  websocket-bridge-testing-guide.md
assets/: CMakeLists.txt  package.xml  std_name_link_joint.json
assets/config/: joint_names_assets.yaml
assets/launch/: display.launch  display.launch.py  gazebo.launch
assets/meshes/: foot_wedge.stl  left_ankle_1_3_cube_link.STL  left_ankle_1_3_link.STL  left_ankle_2_3_cube_link.STL  left_ankle_3_3_cube_link.STL  left_ankle_3_3_page_link.STL  left_ankle_axle_link.STL  left_foot_link.STL  left_hip_cube_link.STL  left_hip_pitch_engine_link.STL  left_hip_yaw_engine_link.STL  left_toe_link.STL  right_ankle_1_3_link.STL  right_ankle_3_3_link.STL  right_ankle_3_3_page_link.STL  right_ankle_axle_link.STL  right_ankle_cube_link.STL  right_foot_link.STL  right_hip_cube_link.STL  right_shin_link.STL
assets/urdf/: assets.csv  assets.urdf
docs/: RASPBERRY_PI_DOCKER_DEPLOYMENT.md  driver_test_sucess.cc  module_responsibilities.md  plan.md  raspi.md  ws-servo-protocol.md
scripts/: bus_servo.sh  drive.py  init.sh  install_dependencies.sh  integration_test.sh  preprocess_bvh.py  prod_start.sh  sim_bridge_co_test.sh  test_bus_servo.sh  test_lx.py  test_servo_drivers.sh  update_jiyuan_from_export.sh  verify_servo_msgs.py  verify_system.sh
src/assets/: package.xml
src/assets/launch/: display.launch.py  gazebo.launch
src/assets/meshes/: right_shin_link.STL
src/control/: package.xml  setup.py
src/control/servo_control/: __init__.py  servo_control_node.py
src/core/: package.xml  setup.cfg  setup.py
src/core/config/: servo_params.yaml
src/core/launch/: servo_system.launch.py
src/core/servo_core/: __init__.py  core.py
src/hardware/: package.xml  setup.cfg  setup.py
src/hardware/sensor_hardware/: __init__.py  imu_driver.py  imu_serial_driver.py
src/hardware/servo_hardware/: __init__.py  bus_port_driver.py  bus_protocol_registry.py  bus_protocol_router.py  bus_servo.py  pca_servo.py  servo_offset_calibrator.py  servo_router.py
src/hardware/servo_hardware/config/: bus_servo_map.json  manual_protocol_map.json  servo_limit_map.json  servo_offset_map.json
src/hardware/servo_hardware/protocols/: __init__.py  base.py  lx_protocol.py  zl_protocol.py
src/hardware/test/: test_bus_port_driver_offset.py  test_bus_protocol_registry.py  test_bus_protocol_router_runtime_probe.py  test_bus_protocols.py
src/mjc_viewer/: CMakeLists.txt  package.xml
src/mjc_viewer/gaoda_jiyuan/: jiyuan.xml  scene.xml
src/mjc_viewer/gaoda_jiyuan/assets/: base_link.STL  foot_wedge.stl  left_ankle_1_3_cube_link.STL  left_ankle_1_3_page_link.STL  left_ankle_2_3_link.STL  left_ankle_2_3_page_link.STL  left_ankle_3_3_cube_link.STL  left_ankle_3_3_link.STL  left_ankle_axle_link.STL  left_ankle_cube_link.STL  left_hip_pitch_engine_link.STL  left_hip_roll_link.STL  left_shin_link.STL  left_thigh_link.STL  right_ankle_1_3_cube_link.STL  right_ankle_1_3_page_link.STL  right_ankle_2_3_cube_link.STL  right_ankle_2_3_page_link.STL  right_ankle_3_3_cube_link.STL  right_ankle_3_3_link.STL  right_ankle_cube_link.STL  right_hip_cube_link.STL  right_hip_roll_link.STL  right_hip_yaw_engine_link.STL  right_thigh_link.STL  right_toe_link.STL  toe_wedge.stl
src/mjc_viewer/launch/: mjc_viewer.launch.py
src/mjc_viewer/scripts/: mjc_viewer_py
src/mjc_viewer/src/: mjc_viewer_node.cpp
src/parallel_3dof_controller/: README.md  package.xml  setup.cfg  setup.py
src/parallel_3dof_controller/config/: parallel_3dof_instances.yaml  parallel_3dof_params.yaml
src/parallel_3dof_controller/launch/: parallel_3dof_controller.launch.py  parallel_3dof_multi.launch.py
src/parallel_3dof_controller/parallel_3dof_controller/: __init__.py  controller_node.py  kinematics_solver.py  tdpm.py
src/parallel_3dof_controller/test/: test_controller_node.py  test_kinematics_solver.py  test_tdpm.py
src/record_load_action/: README.md  package.xml  setup.cfg  setup.py
src/record_load_action/config/: bvh_action_map.json  control_id_map.json
src/record_load_action/config/bvh/: backwards_rifle_walk.bvh  backwards_rifle_walk.json  hip_hop_dancing.bvh  hip_hop_dancing.json  hurricane_kick.bvh  hurricane_kick.json  name.json  strafing.bvh  strafing.json  walking.bvh  walking.json
src/record_load_action/record_load_action/: __init__.py  bvh_player.py  bvh_static_convert.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: urdf.rviz
src/robot_description/launch/: display.launch  display.launch.py  gazebo.launch
src/robot_description/meshes/: base_link.STL  left_ankle_axle_link.STL  left_ankle_cube_link.STL  left_arm_link.STL  left_branch_link.STL  left_foot_link.STL  left_forearm_link.STL  left_hand_link.STL  left_hip_cube_link.STL  left_hip_pitch_engine_link.STL  left_hip_roll_link.STL  left_hip_yaw_engine_link.STL  left_shin_link.STL  left_shoulder_link.STL  left_thigh_link.STL  (+49 more)
src/sensor_msgs/: CMakeLists.txt  package.xml
src/sensor_msgs/msg/: ImuData.msg
src/servo_drivers/: package.xml  setup.cfg  setup.py
src/servo_drivers/servo_drivers/: __init__.py  bus_servo_plugin.py  pca_servo_plugin.py
src/servo_hardware_interface/: package.xml  setup.cfg  setup.py
src/servo_hardware_interface/servo_hardware_interface/: __init__.py  hardware_interface.py  resource_manager.py  servo_manager.py
src/servo_msgs/: CMakeLists.txt  package.xml
src/sim_servo_bridge_cpp/: CMakeLists.txt  package.xml
src/sim_servo_bridge_cpp/config/: default_params.yaml
src/sim_servo_bridge_cpp/src/: sim_servo_bridge_node.cpp
src/websocket/: README.md  example_server.py  log  package.xml  raspberry_pi_client_example.py  setup.py
(+37 files in other folders)
