<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>assets</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for assets</p>
    <p>This package contains configuration data, 3D models and launch files
      for assets robot</p>
  </description>
  <author>chenpeel</author>
  <maintainer email="chenpeel@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type></export>
<depend>rclpy</depend><depend>urdf</depend><depend>xacro</depend><depend>robot_state_publisher</depend><depend>joint_state_publisher_gui</depend><depend>rviz2</depend></package>