cmake_minimum_required(VERSION 3.8)
project(mjc_viewer)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

add_executable(mjc_viewer_node src/mjc_viewer_node.cpp)
ament_target_dependencies(mjc_viewer_node rclcpp)

install(TARGETS mjc_viewer_node
  DESTINATION lib/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/mjc_viewer_py
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY
  gaoda_jiyuan
  launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
