<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>record_load_action</name>
  <version>0.0.0</version>
  <description>动作资源包（BVH/其它模式），用于WebSocket桥接动作播放</description>
  <maintainer email="chenpeel@foxmail.com">Chenpeel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
