<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_servo_bridge_cpp</name>
  <version>0.1.0</version>
  <description>rclcpp 双向桥：/sim/joint_cmd 到 /servo/*，以及 /servo/state 到 /sim/joint_state_fb</description>
  <maintainer email="chenpeel@foxmail.com">chenpeel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>servo_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
